rgw: update beast frontend for boost 1.66

Fixes: http://tracker.ceph.com/issues/22600

Signed-off-by: Casey Bodley <cbodley@redhat.com>